...
    <string name="dither_tool_info_title">Dither Tool Info</string>
    <string name="dither_tool_info_text">Draw checkerboard patterns, good for shading</string>
    <string name="shading_tool_info_title">Shading Tool Info</string>
    <string name="shading_tool_info_text">Lighten/darken pixels on your canvas</string>

    <!-- Exception strings -->
    <string name="exception_invalid_project_name">Name cannot be empty</string>
    <string name="exception_invalid_width">Value must be between 1 and 10,000</string>
    <string name="exception_invalid_height">Value must be between 1 and 10,000</string>
    <string name="exception_invalid_spray_radius">Value must be between 2 and 10,000</string>
    <string name="exception_invalid_spray_strength">Value must be between 2 and 10,000</string>
    <string name="exception_empty_width">Width cannot be empty</string>
    <string name="exception_empty_height">Height cannot be empty</string>
    <string name="exception_empty_color_palette_name">Color palette name cannot be empty</string>
    <string name="exception_empty_spray_radius">Radius cannot be empty</string>
    <string name="exception_empty_spray_strength">Strength cannot be empty</string>
    <string name="exception_failed_to_create_file">Failed to create file</string>
    <string name="exception_failed_to_compress_file">Failed to compress file</string>
    <string name="exception_invalid_file_name">File name cannot be empty</string>
...
